[package]
name = "warp_subdomain"
version = "1.0.0"
edition = "2021"
description = "A Subdomain parser for the warp web server framework"
repository = "https://github.com/mochamadsatria/warp_subdomain"
keywords = ["warp", "subdomain", "middleware"]
license = "MIT"
exclude = [
    ".gitignore",
    ".vscode"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.6.0"
tokio = { version = "1.20.1", features = ["test-util", "macros"] }
warp = "0.3.2"

