[package]
name = "warp_subdomain"
version = "1.1.0"
edition = "2021"
description = "A simple subdomain parser for Warp web server framework with nano second processing time."
repository = "https://github.com/mochamadsatria/warp_subdomain"
keywords = ["warp", "subdomain", "middleware"]
license = "MIT"
exclude = [
    ".gitignore",
    ".vscode",
    "benches/**",
    "examples/**"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["test-util", "macros"] }
warp = { version = "0.3.2", optional = true }

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "benchmark"
harness = false
path="benches/benchmark.rs"

[features]
default = ["warp", "tokio/macros"]

[lib]
doctest = false